[package]
name = "NinjaDungeon"
version = "0.1.0"
edition = "2021"
default-run = "Editor"

[[bin]]
name = "Editor"
path = "src/Editor.rs"

[dependencies.sdl2]
version = "^0.35.2"
default-features = false
features = ["image", "mixer"]

[dependencies.BinaryFileIO]
path = "../BinaryFileIO/"

[dependencies.rlua]
version = "^0.19.1"

