[package]
name = "NinjaDungeon"
version = "0.1.0"
edition = "2021"
default-run = "NinjaDungeon"

[[bin]]
name = "Editor"
path = "src/Editor.rs"

[dependencies.sdl2]
version = "^0.35.2"
default-features = false
features = ["image", "mixer", "ttf"]

[dependencies.serde]
version = "^1.0.163"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

#[dependencies.rlua]
#version = "^0.19.1"

